--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 </div>
             </main>
         </div>
+    </div>
         <div class="hero2">
             <main class="main">
                 <div class="about">
