--- a/index.html
+++ b/index.html
@@ -41,14 +41,22 @@
                 </div>
             </main>
         </div>
-    </div>
-    <div class="hero2">
-        <main class="main">
-            <div class="about">
-                <h1>Sobre Mim</h1>
-                <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque quos asperiores sequi vitae ut corrupti qui odit rerum placeat? Quis quo sequi eligendi ipsam ducimus molestias quod in a quos.</h2>
-            </div>
-        </main>
+        <div class="hero2">
+            <main class="main">
+                <div class="about">
+                    <h1>Sobre Mim</h1>
+                    <h2>Sou autodidata e procuro aprender sozinho, analisando projetos e trabalhos já feitos a fim de entendê-los e aprender com eles. Sou curioso e gosto de aprender coisas novas. Me interessei pela programação e hoje é a área que desejo seguir.</h2>
+                </div>
+            </main>
+        </div>
+        <div class="hero3">
+            <main class="main">
+                <div class="center">
+                    <h1>Experiência</h1>
+                    <h2>Saiba o que já aprendi</h2>
+                </div>
+            </main>
+        </div>
     </div>
 </body>
 </html>
