--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
                         <li>Email</li>
                         <li>Telefone</li>
                     </ul>
-                </div>
-                <div class="right">
-                    <ul>
-                        <li><img src="img/eu.png" width="350"  alt="Lucas"></li>
-                    </ul>
-                </div>
+                </div>  
+                <ul>
+                    <li><img src="img/eu.png"  alt="Lucas"></li>
+                </ul>
+            </div>
             </main>
         </div>
     </div>
