--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lucas Morais</title>
-    <link rel="stylesheet" href="index.css"
+    <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans:wght@400;700&family=Jost:ital,wght@0,400;0,600;0,700;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="wrapper">
-        <header class="cabecalho">
+        <header id="cabecalho">
         <nav class="nav">
             <ul>
                 <li><a href="#">Início</a></li>
-                <li><a href="#"></a>Sobre Mim</li>
-                <li><a href="#"></a>Experiência</li>
-                <li><a href="#"></a>Contatos</li>
+                <li><a href="#sobre-mim">Sobre Mim</a></li>
+                <li><a href="#experience">Experiência</a></li>
+                <li><a href="#contacts">Contatos</a></li>
             </ul>
         </nav>
         </header>
@@ -41,22 +41,55 @@
             </main>
         </div>
     </div>
-        <div class="hero2">
+        <div id="sobre-mim">
             <main class="main">
                 <div class="about">
                     <h1>Sobre Mim</h1>
-                    <h2>Sou autodidata e procuro aprender sozinho, analisando projetos e trabalhos já feitos a fim de entendê-los e aprender com eles. Sou curioso e gosto de aprender coisas novas. Me interessei pela programação e hoje é a área que desejo seguir.</h2>
+                    <p>Sou autodidata e procuro aprender sozinho, analisando projetos e trabalhos já feitos a fim de entendê-los e aprender com eles. Sou curioso e gosto de aprender coisas novas. Me interessei pela programação e hoje é a área que desejo seguir.</p>
                 </div>
             </main>
         </div>
-        <div class="hero3">
-            <main class="main">
-                <div class="center">
-                    <h1>Experiência</h1>
-                    <h2>Saiba o que já aprendi</h2>
+            <div id="experience">
+                <div class="title">
+                    <div class="texto">
+                        <h1>Experiência</h1>
+                        <p>Saiba o que já aprendi</p>
+                    </div>
                 </div>
-            </main>
+                <div id="content">
+                    <div class="first">
+                        <h1>Curso de Informática</h1>
+                        <p>Nesse curso tive uma introdução e aprendi a utilizar o pacote office, também tive aulas sobre empreendedorismo e hardware</p>
+                    </div>
+                    <div class="second">
+                        <h1>Curso de Inglês</h1>
+                        <p>Nesse curso aprendi vocabulário e passei de nível básico para intermediário no inglês</p>
+                    </div>
+                    <div class="third">
+                        <h1>Estágio de Informática</h1>
+                        <p>No estágio aprofundei meus conhecimentos sobre o curso que fiz, além de ter meu primeiro contato com programação e aprender a dar aula sobre os temas</p>
+                    </div>
+                </div>
+            </div>
         </div>
+        <div id="contacts">
+            <div class="main">
+                <div class="texto">
+                    <h1>Contatos</h1>
+                    <p>Você pode me encontrar facilmente por aqui</p>
+                </div>
+                <div id="images">
+                <div class="fotos">
+                    <ul>
+                        <img src="img/mail (1).png" alt="email"/>
+                        <img src="img/github (1).png" alt="GitHub"/>
+                        <img src="img/instagram (2).png" alt="Instagram"/>
+                        <img src="img/whatsapp (1).png" alt="Whatsapp"/>  
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
 </body>
 </html>
